--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hammerjs": "^2.0.8",
     "highcharts": "^8.0.0",
     "highcharts-angular": "^2.4.0",
+    "ng-pick-datetime": "^7.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
