--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "highcharts": "^8.0.0",
     "highcharts-angular": "^2.4.0",
     "ng-pick-datetime": "^7.0.0",
+    "ngx-mat-datetime-picker": "^3.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
